--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   "dependencies": {
     "@svgr/webpack": "^4.3.3",
     "antd": "^3.19.5",
+    "axios": "^0.19.0",
     "dva": "^2.6.0-beta.6",
     "flat": "^4.1.0",
+    "gravatar": "^1.8.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "xdomain": "^0.8.2"
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
