Add code formatter

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,3 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all",
-  "printWidth": 100,
-  "overrides": [
-    {
-      "files": ".prettierrc",
-      "options": { "parser": "json" }
-    }
-  ]
+  "endOfLine": "lf"
 }
