--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "umi build",
     "test": "umi test",
     "lint": "eslint --ext .js src",
-    "precommit": "lint-staged"
+    "format": "prettier --write \"src/**/*.js\""
   },
   "dependencies": {
     "@svgr/webpack": "^4.3.3",
@@ -34,6 +34,7 @@
     "eslint-plugin-react": "^7.11.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "prettier": "^1.19.1",
     "react-test-renderer": "^16.7.0",
     "umi": "^2.7.7",
     "umi-plugin-react": "^1.8.4"
