--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "dependencies": {
     "@svgr/webpack": "^4.3.3",
     "@types/gravatar": "^1.8.0",
+    "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/validator": "^12.0.1",
     "antd": "^3.26.2",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
@@ -18,6 +20,7 @@
     "gravatar": "^1.8.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "lodash.debounce": "^4.0.8",
     "mobx": "^5.15.0",
     "mobx-persist": "^0.4.1",
     "mobx-react": "^6.1.4",
@@ -29,7 +32,8 @@
     "react-intl": "^3.9.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "validator": "^12.1.0"
   },
   "config-overrides-path": "react-app-rewired.js",
   "scripts": {
