[general] Replace react-router with navi

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.1",
   "dependencies": {
     "@svgr/webpack": "^4.3.3",
+    "@tanem/react-nprogress": "^3.0.9",
     "@types/gravatar": "^1.8.0",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.1.3",
     "@types/validator": "^12.0.1",
     "antd": "^3.26.2",
     "axios": "^0.19.0",
@@ -24,13 +24,14 @@
     "mobx": "^5.15.0",
     "mobx-persist": "^0.4.1",
     "mobx-react": "^6.1.4",
+    "navi": "^0.13.6",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-helmet-async": "^1.0.4",
     "react-intl": "^3.9.2",
-    "react-router-dom": "^5.1.2",
+    "react-navi": "^0.13.6",
     "react-scripts": "3.3.0",
     "typescript": "~3.7.2",
     "validator": "^12.1.0"
