--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/uuid": "^3.4.6",
     "@types/validator": "^12.0.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
@@ -17,6 +18,7 @@
     "flat": "^5.0.0",
     "fs-extra": "^8.1.0",
     "gravatar": "^1.8.0",
+    "immutability-helper": "^3.0.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "lodash.debounce": "^4.0.8",
@@ -33,9 +35,11 @@
     "react-intl": "^3.9.2",
     "react-navi": "^0.13.6",
     "react-scripts": "3.3.0",
+    "react-textarea-autosize": "^7.1.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "typescript": "~3.7.2",
+    "uuid": "^3.3.3",
     "validator": "^12.1.0"
   },
   "config-overrides-path": "react-app-rewired.js",
