--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mobx-react": "^6.1.4",
     "navi": "^0.13.6",
     "noty": "^3.2.0-beta",
+    "p-all": "^2.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
