--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mobx": "^5.15.0",
     "mobx-persist": "^0.4.1",
     "mobx-react": "^6.1.4",
+    "mobx-utils": "^5.5.3",
     "navi": "^0.13.6",
     "noty": "^3.2.0-beta",
     "p-all": "^2.1.0",
