--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.isequal": "^4.5.5",
     "@types/node": "^12.0.0",
+    "@types/object-path": "^0.11.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/uuid": "^3.4.6",
@@ -32,6 +33,7 @@
     "mobx-utils": "^5.5.3",
     "navi": "^0.13.6",
     "noty": "^3.2.0-beta",
+    "object-path": "^0.11.4",
     "p-all": "^2.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
