--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@svgr/webpack": "^4.3.3",
     "@tanem/react-nprogress": "^3.0.9",
     "@types/gravatar": "^1.8.0",
+    "@types/highlight.js": "^9.12.3",
     "@types/js-yaml": "^3.12.2",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.isequal": "^4.5.5",
@@ -14,6 +15,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/uuid": "^3.4.6",
     "@types/validator": "^12.0.1",
+    "ansi-to-html": "^0.6.14",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
@@ -21,6 +23,7 @@
     "flat": "^5.0.0",
     "fs-extra": "^8.1.0",
     "gravatar": "^1.8.0",
+    "highlight.js": "^9.18.1",
     "immutability-helper": "^3.0.1",
     "js-yaml": "^3.13.1",
     "less": "^3.10.3",
