--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/object-path": "^0.11.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/socket.io-client": "^1.4.32",
     "@types/uuid": "^3.4.6",
     "@types/validator": "^12.0.1",
     "ansi-to-html": "^0.6.14",
@@ -26,6 +27,7 @@
     "highlight.js": "^9.18.1",
     "immutability-helper": "^3.0.1",
     "js-yaml": "^3.13.1",
+    "jsondiffpatch": "^0.4.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "lodash.clonedeep": "^4.5.0",
@@ -50,6 +52,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "sha256-wasm": "^1.2.1",
+    "socket.io-client": "^2.3.0",
     "streamsaver": "^2.0.3",
     "typescript": "~3.7.2",
     "use-debounce": "^3.3.0",
