--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@svgr/webpack": "^4.3.3",
     "@tanem/react-nprogress": "^3.0.9",
+    "@types/chart.js": "^2.9.14",
     "@types/gravatar": "^1.8.0",
     "@types/highlight.js": "^9.12.3",
     "@types/js-yaml": "^3.12.2",
@@ -12,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/object-path": "^0.11.0",
     "@types/react": "^16.9.0",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^16.9.0",
     "@types/socket.io-client": "^1.4.32",
     "@types/uuid": "^3.4.6",
@@ -19,6 +21,7 @@
     "ansi-to-html": "^0.6.14",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
+    "chart.js": "^2.9.3",
     "customize-cra": "^0.9.1",
     "dtsgenerator": "^2.3.2",
     "flat": "^5.0.0",
@@ -43,6 +46,7 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.12.0",
     "react-helmet-async": "^1.0.4",
     "react-intl": "^3.9.2",
