--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-prismjs": "^2.0.1",
     "chart.js": "^2.9.3",
+    "class-validator": "^0.11.1",
     "css-element-queries": "^1.2.3",
     "customize-cra": "^0.9.1",
     "dayjs": "^1.8.22",
