--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@svgr/webpack": "^4.3.3",
     "@tanem/react-nprogress": "^3.0.9",
+    "@types/blueimp-md5": "^2.7.0",
     "@types/chart.js": "^2.9.14",
     "@types/flat": "^5.0.0",
     "@types/gravatar": "^1.8.0",
@@ -24,6 +25,7 @@
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-prismjs": "^2.0.1",
+    "blueimp-md5": "^2.12.0",
     "chart.js": "^2.9.3",
     "class-validator": "^0.11.1",
     "css-element-queries": "^1.2.3",
