--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/js-yaml": "^3.12.2",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.isequal": "^4.5.5",
+    "@types/lodash.merge": "^4.6.6",
     "@types/node": "^12.0.0",
     "@types/object-path": "^0.11.0",
     "@types/prismjs": "^1.16.0",
@@ -43,6 +44,7 @@
     "less-loader": "^5.0.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
+    "lodash.merge": "^4.6.2",
     "mobx": "^5.15.0",
     "mobx-persist": "^0.4.1",
     "mobx-react": "^6.1.4",
