--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^16.9.6",
     "@types/socket.io-client": "^1.4.32",
+    "@types/ua-parser-js": "^0.7.33",
     "@types/uuid": "^7.0.2",
     "@types/validator": "^13.0.0",
     "@types/webpack-env": "^1.15.1",
@@ -35,6 +36,7 @@
     "dtsgenerator": "^2.3.2",
     "file-loader": "^6.0.0",
     "flat": "^5.0.0",
+    "fomantic-ui-css": "^2.8.6",
     "fs-extra": "^9.0.0",
     "gravatar": "^1.8.0",
     "immutability-helper": "^3.0.2",
@@ -68,13 +70,14 @@
     "react-navi": "^0.14.3",
     "react-scripts": "3.4.1",
     "react-textarea-autosize": "^7.1.2",
-    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
     "sha256-wasm": "^1.2.1",
     "socket.io-client": "^2.3.0",
     "streamsaver": "^2.0.4",
+    "timeago.js": "^4.0.2",
     "tree-sitter-wasm-prebuilt": "^0.0.1",
     "typescript": "~3.8.3",
+    "ua-parser-js": "^0.7.21",
     "use-debounce": "^3.4.1",
     "uuid": "^7.0.3",
     "validator": "^13.0.0",
