--- a/package.json
+++ b/package.json
@@ -2,55 +2,55 @@
   "name": "syzoj-ng-app",
   "version": "0.0.1",
   "dependencies": {
-    "@svgr/webpack": "^5.3.1",
-    "@tanem/react-nprogress": "^3.0.23",
+    "@svgr/webpack": "^5.4.0",
+    "@tanem/react-nprogress": "^3.0.40",
     "@types/blueimp-md5": "^2.7.0",
-    "@types/chart.js": "^2.9.19",
-    "@types/flat": "^5.0.0",
+    "@types/chart.js": "^2.9.24",
+    "@types/flat": "^5.0.1",
     "@types/gravatar": "^1.8.0",
-    "@types/js-yaml": "^3.12.3",
+    "@types/js-yaml": "^3.12.5",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.merge": "^4.6.6",
-    "@types/node": "^12.0.0",
+    "@types/node": "^14.6.0",
     "@types/object-path": "^0.11.0",
-    "@types/prismjs": "^1.16.0",
-    "@types/react": "^16.9.34",
+    "@types/prismjs": "^1.16.1",
+    "@types/react": "^16.9.47",
     "@types/react-chartjs-2": "^2.5.7",
-    "@types/react-dom": "^16.9.6",
-    "@types/socket.io-client": "^1.4.32",
+    "@types/react-dom": "^16.9.8",
+    "@types/socket.io-client": "^1.4.33",
     "@types/ua-parser-js": "^0.7.33",
-    "@types/uuid": "^7.0.2",
-    "@types/validator": "^13.0.0",
-    "@types/webpack-env": "^1.15.1",
+    "@types/uuid": "^8.3.0",
+    "@types/validator": "^13.1.0",
+    "@types/webpack-env": "^1.15.2",
     "ansi-to-html": "^0.6.14",
-    "axios": "^0.19.0",
+    "axios": "^0.20.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-prismjs": "^2.0.1",
-    "blueimp-md5": "^2.13.0",
+    "blueimp-md5": "^2.17.0",
     "chart.js": "^2.9.3",
-    "class-validator": "^0.12.1",
+    "class-validator": "^0.12.2",
     "css-element-queries": "^1.2.3",
-    "customize-cra": "^0.9.1",
-    "dayjs": "^1.8.25",
-    "dtsgenerator": "^2.3.2",
+    "customize-cra": "^1.0.0-alpha.0",
+    "dayjs": "^1.8.34",
+    "dtsgenerator": "^3.3.0",
     "file-loader": "^6.0.0",
-    "flat": "^5.0.0",
+    "flat": "^5.0.2",
     "fomantic-ui-css": "^2.8.6",
-    "fs-extra": "^9.0.0",
-    "gravatar": "^1.8.0",
-    "immutability-helper": "^3.0.2",
-    "js-yaml": "^3.13.1",
+    "fs-extra": "^9.0.1",
+    "gravatar": "^1.8.1",
+    "immutability-helper": "^3.1.1",
+    "js-yaml": "^3.14.0",
     "jsondiffpatch": "^0.4.1",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
     "mobx": "^4.15.4",
     "mobx-persist": "^0.4.1",
-    "mobx-react": "^6.2.2",
-    "mobx-utils": "^5.5.7",
+    "mobx-react": "^6.2.5",
+    "mobx-utils": "^5.6.1",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "monaco-tree-sitter": "^0.0.3",
@@ -58,33 +58,32 @@
     "noty": "^3.2.0-beta",
     "object-path": "^0.11.4",
     "p-all": "^3.0.0",
-    "prettier": "^2.0.5",
-    "prismjs": "^1.20.0",
+    "prettier": "^2.1.0",
+    "prismjs": "^1.21.0",
     "react": "^16.13.1",
-    "react-app-rewired": "^2.1.5",
-    "react-chartjs-2": "^2.9.0",
+    "react-app-rewired": "^2.1.6",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
-    "react-helmet-async": "^1.0.5",
-    "react-intl": "^4.5.0",
-    "react-monaco-editor": "^0.36.0",
-    "react-navi": "^0.14.3",
-    "react-scripts": "3.4.1",
-    "react-textarea-autosize": "^7.1.2",
-    "semantic-ui-react": "^0.88.2",
-    "sha256-wasm": "^1.2.1",
+    "react-helmet-async": "^1.0.6",
+    "react-intl": "^5.7.1",
+    "react-monaco-editor": "^0.40.0",
+    "react-navi": "^0.14.4",
+    "react-scripts": "3.4.3",
+    "react-textarea-autosize": "^8.2.0",
+    "semantic-ui-react": "^1.2.1",
     "socket.io-client": "^2.3.0",
     "streamsaver": "^2.0.4",
     "timeago.js": "^4.0.2",
     "tree-sitter-wasm-prebuilt": "^0.0.1",
-    "typescript": "~3.8.3",
+    "typescript": "~4.0.2",
     "ua-parser-js": "^0.7.21",
-    "use-debounce": "^3.4.1",
-    "uuid": "^7.0.3",
-    "validator": "^13.0.0",
+    "use-debounce": "^3.4.3",
+    "uuid": "^8.3.0",
+    "validator": "^13.1.1",
     "wastyle": "^0.0.3",
-    "web-streams-polyfill": "^2.1.1",
-    "web-tree-sitter": "^0.16.2",
-    "workerize-loader": "^1.1.0"
+    "web-streams-polyfill": "^3.0.0",
+    "web-tree-sitter": "^0.16.4",
+    "workerize-loader": "^1.3.0"
   },
   "config-overrides-path": "react-app-rewired.js",
   "scripts": {
@@ -113,7 +112,7 @@
   "author": "Menci",
   "license": "AGPL-3.0",
   "devDependencies": {
-    "cz-conventional-changelog": "3.1.0"
+    "cz-conventional-changelog": "3.2.1"
   },
   "config": {
     "commitizen": {
