--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ language: node_js
 node_js:
   - lts/*
 env:
-  - SYZOJ_NG_APP_CONFIG_FILE=./config-example.json
+  - SYZOJ_NG_APP_CONFIG_FILE=./config-example.yaml
 script: yarn build
