build(generate-api): change generate-api script to run formatter automatically
Previously the usage of the generate-api script is like `yarn generate-api
http://syzoj-ng.test/docs-json`. It's hard to add a `prettier` command after that, so I changed it
to read the `$API_HOST` environment variable.

Now the usage is `API_HOST=http://syzoj-ng.test yarn generate-api`. Note that there's no `/docs-json`
after the host, and even no `/`.

--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\" \"src/**/*.tsx\"",
-    "generate-api": "node scripts/generate-api.js"
+    "generate-api": "node scripts/generate-api.js $API_HOST/docs-json && prettier --write \"src/api-generated/**/*.ts\""
   },
   "eslintConfig": {
     "extends": "react-app"
