--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "semantic-ui-react": "^1.2.1",
     "socket.io-client": "^2.3.0",
     "streamsaver": "^2.0.4",
+    "string-replace-to-array": "^1.0.3",
     "timeago.js": "^4.0.2",
     "tree-sitter-wasm-prebuilt": "^0.0.1",
     "typescript": "~4.0.2",
