--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.merge": "^4.6.6",
+    "@types/markdown-it": "^10.0.2",
     "@types/node": "^14.6.0",
     "@types/object-path": "^0.11.0",
     "@types/prismjs": "^1.16.1",
@@ -47,6 +48,10 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
+    "markdown-it": "^11.0.0",
+    "markdown-it-math-loose": "^4.1.1",
+    "markdown-it-merge-cells": "^1.0.0",
+    "mathjax-full": "^3.1.0",
     "mobx": "^4.15.4",
     "mobx-persist": "^0.4.1",
     "mobx-react": "^6.2.5",
@@ -84,7 +89,8 @@
     "wastyle": "^0.0.3",
     "web-streams-polyfill": "^3.0.0",
     "web-tree-sitter": "^0.16.4",
-    "workerize-loader": "^1.3.0"
+    "workerize-loader": "^1.3.0",
+    "xss": "^1.0.8"
   },
   "config-overrides-path": "react-app-rewired.js",
   "scripts": {
