--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
-    "@tanem/react-nprogress": "^3.0.40",
+    "@tanem/react-nprogress": "^3.0.44",
     "@types/blueimp-md5": "^2.7.0",
     "@types/chart.js": "^2.9.24",
     "@types/flat": "^5.0.1",
@@ -13,48 +13,48 @@
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.merge": "^4.6.6",
     "@types/markdown-it": "^10.0.2",
-    "@types/node": "^14.6.0",
+    "@types/node": "^14.11.1",
     "@types/object-path": "^0.11.0",
     "@types/prismjs": "^1.16.1",
-    "@types/react": "^16.9.47",
+    "@types/react": "^16.9.49",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^16.9.8",
     "@types/socket.io-client": "^1.4.33",
     "@types/ua-parser-js": "^0.7.33",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
-    "@types/webpack-env": "^1.15.2",
+    "@types/webpack-env": "^1.15.3",
     "ansi-to-html": "^0.6.14",
     "axios": "^0.20.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-prismjs": "^2.0.1",
-    "blueimp-md5": "^2.17.0",
+    "blueimp-md5": "^2.18.0",
     "chart.js": "^2.9.3",
     "class-validator": "^0.12.2",
     "css-element-queries": "^1.2.3",
-    "customize-cra": "^1.0.0-alpha.0",
-    "dayjs": "^1.8.34",
+    "customize-cra": "^1.0.0",
+    "dayjs": "^1.8.36",
     "dtsgenerator": "2.7.0",
     "file-loader": "^6.0.0",
     "flat": "^5.0.2",
-    "fomantic-ui-css": "^2.8.6",
+    "fomantic-ui-css": "^2.8.7",
     "fs-extra": "^9.0.1",
     "gravatar": "^1.8.1",
     "immutability-helper": "^3.1.1",
     "js-yaml": "^3.14.0",
     "jsondiffpatch": "^0.4.1",
     "less": "^3.12.2",
-    "less-loader": "^7.0.0",
+    "less-loader": "^7.0.1",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
-    "markdown-it": "^11.0.0",
+    "markdown-it": "^11.0.1",
     "markdown-it-math-loose": "^4.1.1",
     "markdown-it-merge-cells": "^1.0.0",
-    "mathjax-full": "^3.1.0",
+    "mathjax-full": "^3.1.2",
     "mobx": "^4.15.4",
     "mobx-persist": "^0.4.1",
-    "mobx-react": "^6.2.5",
+    "mobx-react": "^6.3.0",
     "mobx-utils": "^5.6.1",
     "monaco-editor": "^0.20.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
@@ -63,14 +63,14 @@
     "noty": "^3.2.0-beta",
     "object-path": "^0.11.4",
     "p-all": "^3.0.0",
-    "prettier": "^2.1.0",
+    "prettier": "^2.1.2",
     "prismjs": "^1.21.0",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
-    "react-helmet-async": "^1.0.6",
-    "react-intl": "^5.7.1",
+    "react-helmet-async": "^1.0.7",
+    "react-intl": "^5.8.2",
     "react-monaco-editor": "^0.40.0",
     "react-navi": "^0.14.4",
     "react-scripts": "3.4.3",
@@ -81,11 +81,11 @@
     "string-replace-to-array": "^1.0.3",
     "timeago.js": "^4.0.2",
     "tree-sitter-wasm-prebuilt": "^0.0.1",
-    "typescript": "~4.0.2",
-    "ua-parser-js": "^0.7.21",
-    "use-debounce": "^3.4.3",
+    "typescript": "~4.0.3",
+    "ua-parser-js": "^0.7.22",
+    "use-debounce": "^5.0.0",
     "uuid": "^8.3.0",
-    "validator": "^13.1.1",
+    "validator": "^13.1.17",
     "wastyle": "^0.0.3",
     "web-streams-polyfill": "^3.0.0",
     "web-tree-sitter": "^0.16.4",
@@ -119,7 +119,7 @@
   "author": "Menci",
   "license": "AGPL-3.0",
   "devDependencies": {
-    "cz-conventional-changelog": "3.2.1"
+    "cz-conventional-changelog": "3.3.0"
   },
   "config": {
     "commitizen": {
