--- a/package.json
+++ b/package.json
@@ -78,9 +78,12 @@
     "semantic-ui-react": "^1.3.0",
     "socket.io-client": "^2.3.0",
     "streamsaver": "^2.0.4",
+    "string-replace-loader": "^2.3.0",
     "string-replace-to-array": "^1.0.3",
     "timeago.js": "^4.0.2",
     "tree-sitter-wasm-prebuilt": "^0.0.1",
+    "typeface-lato": "^0.0.75",
+    "typeface-saira": "^0.0.72",
     "typescript": "~4.0.3",
     "ua-parser-js": "^0.7.22",
     "use-debounce": "^5.0.0",
