feat: add code font options in user preference

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fomantic-ui-css": "^2.8.7",
     "fs-extra": "^9.0.1",
     "gravatar": "^1.8.1",
+    "hack-font": "source-foundry/Hack#1eddf94",
     "immutability-helper": "^3.1.1",
     "js-yaml": "^3.14.0",
     "jsondiffpatch": "^0.4.1",
@@ -83,8 +84,13 @@
     "timeago.js": "^4.0.2",
     "tree-sitter-wasm-prebuilt": "^0.0.1",
     "typeface-fira-code": "^1.1.4",
+    "typeface-inconsolata": "^0.0.72",
     "typeface-lato": "^0.0.75",
+    "typeface-pt-mono": "^0.0.72",
+    "typeface-roboto-mono": "^0.0.75",
     "typeface-saira": "^0.0.72",
+    "typeface-source-code-pro": "^1.1.3",
+    "typeface-ubuntu-mono": "^0.0.72",
     "typescript": "~4.0.3",
     "ua-parser-js": "^0.7.22",
     "use-debounce": "^5.0.0",
