feat(discussion): add discussion module

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^16.9.8",
     "@types/socket.io-client": "^1.4.33",
+    "@types/twemoji": "^12.1.1",
     "@types/ua-parser-js": "^0.7.33",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
@@ -85,6 +86,7 @@
     "string-replace-to-array": "^1.0.3",
     "timeago.js": "^4.0.2",
     "tree-sitter-wasm-prebuilt": "^0.0.1",
+    "twemoji": "^13.0.1",
     "typeface-fira-code": "^1.1.4",
     "typeface-inconsolata": "^0.0.72",
     "typeface-lato": "^0.0.75",
