--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lodash.merge": "^4.6.2",
     "markdown-it": "^11.0.1",
     "markdown-it-math-loose": "^4.1.1",
+    "markdown-it-mentions": "^1.0.0",
     "markdown-it-merge-cells": "^1.0.0",
     "mathjax-full": "^3.1.2",
     "mobx": "^4.15.4",
