--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.0",
     "@types/webpack-env": "^1.15.3",
-    "ansi-to-html": "^0.6.14",
+    "ansi_up": "^4.0.4",
     "axios": "^0.20.0",
     "babel-plugin-import": "^1.13.1",
     "babel-plugin-prismjs": "^2.0.1",
@@ -62,9 +62,10 @@
     "mobx-persist": "^0.4.1",
     "mobx-react": "^6.3.0",
     "mobx-utils": "^5.6.1",
+    "monaco-ace-tokenizer": "^0.2.1",
     "monaco-editor": "^0.21.2",
     "monaco-editor-webpack-plugin": "^2.0.0",
-    "monaco-tree-sitter": "^0.0.3",
+    "monaco-tree-sitter": "^0.0.4",
     "navi": "^0.14.0",
     "noty": "^3.2.0-beta",
     "object-path": "^0.11.5",
