--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Install
       run: yarn
     - name: Build
-      run: SYZOJ_NG_APP_CONFIG_FILE=./config-example.yaml yarn build
+      run: yarn build
     - name: Check style
       run: yarn format --check
