--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-textarea-autosize": "^8.2.0",
     "semantic-ui-react": "^2.0.0",
     "socket.io-client": "^2.3.0",
+    "socket.io-msgpack-parser": "^2.2.1",
     "streamsaver": "^2.0.5",
     "string-replace-to-array": "^1.0.3",
     "timeago.js": "^4.0.2",
