--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "react-app-rewired": "^2.1.6",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^17.0.0",
+    "react-google-recaptcha-v3": "^1.7.0",
     "react-helmet-async": "^1.0.7",
     "react-intl": "^5.8.6",
     "react-monaco-editor": "^0.40.0",
