--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react": "^17.0.0",
     "react-app-rewired": "^2.1.6",
     "react-chartjs-2": "^2.10.0",
+    "react-countdown": "^2.3.1",
     "react-dom": "^17.0.0",
     "react-google-recaptcha-v3": "^1.7.0",
     "react-helmet-async": "^1.0.7",
