feat: support google analytics v3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "noEmit": true,
     "jsx": "react",
     "strict": false,
-    "module": "esnext"
+    "module": "esnext",
+    "strictBindCallApply": true
   },
   "include": [
     "src"
