--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/validator": "^13.1.0",
     "@types/webpack-env": "^1.15.3",
     "ansi_up": "^4.0.4",
+    "autotrack": "^2.4.1",
     "axios": "^0.20.0",
     "babel-plugin-import": "^1.13.1",
     "babel-plugin-prismjs": "^2.0.1",
