chore: upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "@svgr/webpack": "^5.4.0",
     "@tanem/react-nprogress": "^3.0.47",
     "@types/blueimp-md5": "^2.7.0",
-    "@types/chart.js": "^2.9.26",
+    "@types/chart.js": "^2.9.27",
     "@types/flat": "^5.0.1",
     "@types/gravatar": "^1.8.0",
     "@types/js-yaml": "^3.12.5",
@@ -13,12 +13,12 @@
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.merge": "^4.6.6",
     "@types/markdown-it": "^10.0.2",
-    "@types/node": "^14.14.1",
+    "@types/node": "^14.14.6",
     "@types/object-path": "^0.11.0",
-    "@types/prismjs": "^1.16.1",
-    "@types/react": "^16.9.53",
+    "@types/prismjs": "^1.16.2",
+    "@types/react": "^16.9.55",
     "@types/react-chartjs-2": "^2.5.7",
-    "@types/react-dom": "^16.9.8",
+    "@types/react-dom": "^16.9.9",
     "@types/socket.io-client": "^1.4.33",
     "@types/twemoji": "^12.1.1",
     "@types/ua-parser-js": "^0.7.33",
@@ -27,7 +27,7 @@
     "@types/webpack-env": "^1.15.3",
     "ansi_up": "^4.0.4",
     "autotrack": "^2.4.1",
-    "axios": "^0.20.0",
+    "axios": "^0.21.0",
     "babel-plugin-import": "^1.13.1",
     "babel-plugin-prismjs": "^2.0.1",
     "blueimp-md5": "^2.18.0",
@@ -36,9 +36,9 @@
     "css-element-queries": "^1.2.3",
     "css-url-relative-plugin": "^1.0.1",
     "customize-cra": "^1.0.0",
-    "dayjs": "^1.9.3",
+    "dayjs": "^1.9.5",
     "dtsgenerator": "2.7.0",
-    "file-loader": "^6.1.1",
+    "file-loader": "^6.2.0",
     "flat": "^5.0.2",
     "fomantic-ui-css": "^2.8.7",
     "fontsource-dm-mono": "^3.0.5",
@@ -55,7 +55,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
-    "markdown-it": "^12.0.1",
+    "markdown-it": "^12.0.2",
     "markdown-it-math-loose": "^4.1.1",
     "markdown-it-mentions": "^1.0.0",
     "markdown-it-merge-cells": "^1.0.0",
@@ -78,17 +78,17 @@
     "prismjs": "^1.22.0",
     "react": "^17.0.0",
     "react-app-rewired": "^2.1.6",
-    "react-chartjs-2": "^2.10.0",
+    "react-chartjs-2": "2.10.0",
     "react-countdown": "^2.3.1",
     "react-dom": "^17.0.0",
     "react-google-recaptcha-v3": "^1.7.0",
     "react-helmet-async": "^1.0.7",
-    "react-intl": "^5.8.6",
+    "react-intl": "^5.9.2",
     "react-monaco-editor": "^0.40.0",
     "react-navi": "^0.14.4",
-    "react-scripts": "3.4.4",
-    "react-textarea-autosize": "^8.2.0",
-    "semantic-ui-react": "^2.0.0",
+    "react-scripts": "4.0.0",
+    "react-textarea-autosize": "^8.3.0",
+    "semantic-ui-react": "^2.0.1",
     "sf-mono-webfont": "^1.0.0",
     "socket.io-client": "^2.3.0",
     "socket.io-msgpack-parser": "^2.2.1",
@@ -105,9 +105,9 @@
     "typeface-saira": "^1.1.13",
     "typeface-source-code-pro": "^1.1.13",
     "typeface-ubuntu-mono": "^1.1.13",
-    "typescript": "~4.0.3",
+    "typescript": "~4.0.5",
     "ua-parser-js": "^0.7.22",
-    "use-debounce": "^5.0.0",
+    "use-debounce": "^5.0.3",
     "uuid": "^8.3.1",
     "validator": "^13.1.17",
     "wastyle": "^0.0.3",
