feat(*): add content font preference

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@tanem/react-nprogress": "^3.0.47",
     "@types/blueimp-md5": "^2.7.0",
     "@types/chart.js": "^2.9.27",
+    "@types/css": "^0.0.31",
     "@types/flat": "^5.0.1",
     "@types/gravatar": "^1.8.0",
     "@types/js-yaml": "^3.12.5",
@@ -33,6 +34,7 @@
     "blueimp-md5": "^2.18.0",
     "chart.js": "^2.9.4",
     "class-validator": "^0.12.2",
+    "css": "^3.0.0",
     "css-element-queries": "^1.2.3",
     "css-url-relative-plugin": "^1.0.1",
     "customize-cra": "^1.0.0",
@@ -42,7 +44,22 @@
     "flat": "^5.0.2",
     "fomantic-ui-css": "^2.8.7",
     "fontsource-dm-mono": "^3.0.5",
+    "fontsource-fira-code": "^3.0.5",
+    "fontsource-inconsolata": "^3.0.5",
     "fontsource-jetbrains-mono": "^3.0.5",
+    "fontsource-noto-sans": "^3.0.10",
+    "fontsource-noto-serif": "^3.0.9",
+    "fontsource-nunito-sans": "^3.0.9",
+    "fontsource-open-sans": "^3.0.9",
+    "fontsource-pt-mono": "^3.0.9",
+    "fontsource-pt-sans": "^3.0.9",
+    "fontsource-roboto": "^3.0.3",
+    "fontsource-roboto-mono": "^3.0.3",
+    "fontsource-roboto-slab": "^3.0.3",
+    "fontsource-source-code-pro": "^3.0.10",
+    "fontsource-source-serif-pro": "^3.0.10",
+    "fontsource-ubuntu-mono": "^3.0.9",
+    "fontsource-zilla-slab": "^3.0.9",
     "fs-extra": "^9.0.1",
     "git-repo-info": "^2.1.1",
     "gravatar": "^1.8.1",
@@ -97,18 +114,13 @@
     "timeago.js": "^4.0.2",
     "tree-sitter-wasm-prebuilt": "^0.0.1",
     "twemoji": "^13.0.1",
-    "typeface-fira-code": "^1.1.13",
-    "typeface-inconsolata": "^1.1.13",
     "typeface-lato": "^1.1.13",
-    "typeface-pt-mono": "^1.1.13",
-    "typeface-roboto-mono": "^1.1.13",
     "typeface-saira": "^1.1.13",
-    "typeface-source-code-pro": "^1.1.13",
-    "typeface-ubuntu-mono": "^1.1.13",
     "typescript": "~4.0.5",
     "ua-parser-js": "^0.7.22",
     "use-debounce": "^5.0.3",
     "uuid": "^8.3.1",
+    "val-loader": "^2.1.2",
     "validator": "^13.1.17",
     "wastyle": "^0.0.3",
     "web-streams-polyfill": "^3.0.0",
