--- a/package.json
+++ b/package.json
@@ -1,7 +1,41 @@
 {
   "name": "syzoj-ng-app",
   "version": "0.0.8",
+  "description": "The frontend of next-generation SYZOJ",
+  "repository": "https://github.com/syzoj/syzoj-ng-app",
+  "license": "AGPL-3.0",
+  "author": "Menci",
+  "jsdelivr": "build/index.html",
+  "files": [
+    "/build"
+  ],
+  "scripts": {
+    "build": "node scripts/build.js",
+    "format": "prettier --write \"config/**/*.js\" \"scripts/**/*.js\" \"src/**/*.ts\" \"src/**/*.js\" \"src/**/*.tsx\"",
+    "generate-api": "node scripts/generate-api.js $API_HOST/docs-json && prettier --write \"src/api-generated/**/*.ts\"",
+    "postinstall": "patch-package",
+    "start": "node scripts/start.js"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
+    "@babel/core": "7.12.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@svgr/webpack": "^5.4.0",
     "@tanem/react-nprogress": "^3.0.47",
     "@types/blueimp-md5": "^2.7.0",
@@ -29,17 +63,25 @@
     "ansi_up": "^4.0.4",
     "autotrack": "^2.4.1",
     "axios": "^0.21.0",
+    "babel-loader": "8.1.0",
     "babel-plugin-import": "^1.13.1",
+    "babel-plugin-named-asset-import": "^0.3.7",
     "babel-plugin-prismjs": "^2.0.1",
+    "babel-preset-react-app": "^10.0.0",
+    "bfj": "^7.0.2",
     "blueimp-md5": "^2.18.0",
+    "camelcase": "^6.1.0",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
     "chart.js": "^2.9.4",
     "class-validator": "^0.12.2",
     "css": "^3.0.0",
     "css-element-queries": "^1.2.3",
+    "css-loader": "4.3.0",
     "css-url-relative-plugin": "^1.0.1",
-    "customize-cra": "^1.0.0",
     "cz-conventional-changelog": "3.3.0",
     "dayjs": "^1.9.6",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
     "dtsgenerator": "2.7.0",
     "file-loader": "^6.2.0",
     "flat": "^5.0.2",
@@ -65,6 +107,7 @@
     "git-repo-info": "^2.1.1",
     "gravatar": "^1.8.1",
     "hack-font": "source-foundry/Hack#1eddf94",
+    "html-webpack-plugin": "4.5.0",
     "immutability-helper": "^3.1.1",
     "js-yaml": "^3.14.0",
     "jsondiffpatch": "^0.4.1",
@@ -78,6 +121,7 @@
     "markdown-it-mentions": "^1.0.0",
     "markdown-it-merge-cells": "^1.0.0",
     "mathjax-full": "^3.1.2",
+    "mini-css-extract-plugin": "0.11.3",
     "mobx": "^4.15.4",
     "mobx-persist": "^0.4.1",
     "mobx-react-lite": "^2.2.2",
@@ -89,29 +133,41 @@
     "navi": "^0.14.0",
     "noty": "^3.2.0-beta",
     "object-path": "^0.11.5",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
     "p-all": "^3.0.0",
     "patch-package": "^6.2.2",
+    "postcss-flexbugs-fixes": "4.2.1",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "8.0.1",
+    "postcss-preset-env": "6.7.0",
+    "postcss-safe-parser": "5.0.2",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.1.2",
     "prismjs": "^1.22.0",
     "react": "^17.0.0",
-    "react-app-rewired": "^2.1.6",
+    "react-app-polyfill": "^2.0.0",
     "react-chartjs-2": "2.11.1",
     "react-countdown": "^2.3.1",
+    "react-dev-utils": "^11.0.0",
     "react-dom": "^17.0.0",
     "react-google-recaptcha-v3": "^1.7.0",
     "react-helmet-async": "^1.0.7",
     "react-intl": "^5.10.1",
     "react-monaco-editor": "^0.40.0",
     "react-navi": "^0.14.4",
-    "react-scripts": "4.0.0",
+    "react-refresh": "^0.8.3",
     "react-textarea-autosize": "^8.3.0",
+    "resolve": "1.18.1",
+    "resolve-url-loader": "^3.1.2",
     "semantic-ui-react": "^2.0.1",
+    "semver": "7.3.2",
     "sf-mono-webfont": "^1.0.0",
     "socket.io-client": "^2.3.0",
     "socket.io-msgpack-parser": "^2.2.1",
     "streamsaver": "^2.0.5",
     "string-replace-to-array": "^1.0.3",
+    "style-loader": "1.3.0",
+    "terser-webpack-plugin": "4.2.3",
     "timeago.js": "^4.0.2",
     "tree-sitter-wasm-prebuilt": "^0.0.1",
     "twemoji": "^13.0.1",
@@ -119,6 +175,7 @@
     "typeface-saira": "^1.1.13",
     "typescript": "~4.0.5",
     "ua-parser-js": "^0.7.22",
+    "url-loader": "4.1.1",
     "use-debounce": "^5.0.4",
     "uuid": "^8.3.1",
     "val-loader": "^2.1.2",
@@ -126,43 +183,11 @@
     "wastyle": "^0.0.3",
     "web-streams-polyfill": "^3.0.1",
     "web-tree-sitter": "^0.16.4",
-    "workerize-loader": "^1.3.0",
+    "webpack": "4.44.2",
+    "webpack-dev-server": "3.11.0",
+    "webpack-module-nomodule-plugin": "^1.0.1",
+    "webpack-modules": "^1.0.0",
+    "webpack-syntax-resolver-plugin": "^0.0.1",
     "xss": "^1.0.8"
-  },
-  "config-overrides-path": "react-app-rewired.js",
-  "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "format": "prettier --write \"*.js\" \"scripts/**/*.js\" \"src/**/*.ts\" \"src/**/*.js\" \"src/**/*.tsx\"",
-    "generate-api": "node scripts/generate-api.js $API_HOST/docs-json && prettier --write \"src/api-generated/**/*.ts\"",
-    "postinstall": "patch-package"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "description": "The frontend of next-generation SYZOJ",
-  "repository": "https://github.com/syzoj/syzoj-ng-app",
-  "author": "Menci",
-  "license": "AGPL-3.0",
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "files": [
-    "/build"
-  ],
-  "jsdelivr": "build/index.html"
+  }
 }
