--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.merge": "^4.6.6",
     "@types/markdown-it": "^10.0.3",
-    "@types/node": "^14.14.9",
+    "@types/node": "^14.14.10",
     "@types/object-path": "^0.11.0",
     "@types/prismjs": "^1.16.2",
     "@types/react": "^17.0.0",
@@ -29,7 +29,7 @@
     "ansi_up": "^4.0.4",
     "autotrack": "^2.4.1",
     "axios": "^0.21.0",
-    "babel-plugin-import": "^1.13.1",
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-prismjs": "^2.0.1",
     "blueimp-md5": "^2.18.0",
     "chart.js": "^2.9.4",
@@ -101,7 +101,7 @@
     "react-dom": "^17.0.0",
     "react-google-recaptcha-v3": "^1.7.0",
     "react-helmet-async": "^1.0.7",
-    "react-intl": "^5.10.4",
+    "react-intl": "^5.10.5",
     "react-monaco-editor": "^0.40.0",
     "react-navi": "^0.14.4",
     "react-scripts": "4.0.1",
@@ -115,7 +115,7 @@
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
     "timeago.js": "^4.0.2",
-    "tree-sitter-wasm-prebuilt": "^0.0.1",
+    "tree-sitter-wasm-prebuilt": "0.0.1",
     "twemoji": "^13.0.1",
     "typeface-lato": "^1.1.13",
     "typeface-saira": "^1.1.13",
@@ -125,9 +125,9 @@
     "uuid": "^8.3.1",
     "val-loader": "^2.1.2",
     "validator": "^13.1.17",
-    "wastyle": "^0.0.3",
+    "wastyle": "^0.0.5",
     "web-streams-polyfill": "^3.0.1",
-    "web-tree-sitter": "^0.16.4",
+    "web-tree-sitter": "0.16.4",
     "workerize-loader": "^1.3.0",
     "xss": "^1.0.8"
   },
