--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "syzoj-ng-app",
   "version": "0.1.5",
   "devDependencies": {
+    "@hackmd/markdown-it-task-lists": "^2.1.1",
     "@tanem/react-nprogress": "^3.0.49",
     "@types/blueimp-md5": "^2.7.0",
     "@types/chart.js": "^2.9.28",
