feat(*): add dark theme support

--- a/package.json
+++ b/package.json
@@ -2,79 +2,80 @@
   "name": "syzoj-ng-app",
   "version": "0.1.7",
   "devDependencies": {
+    "@fontsource/dm-mono": "^4.0.0",
+    "@fontsource/fira-code": "^4.0.0",
+    "@fontsource/inconsolata": "^4.0.0",
+    "@fontsource/jetbrains-mono": "^4.0.0",
+    "@fontsource/noto-sans": "^4.0.0",
+    "@fontsource/noto-serif": "^4.0.0",
+    "@fontsource/nunito-sans": "^4.0.0",
+    "@fontsource/open-sans": "^4.0.0",
+    "@fontsource/pt-mono": "^4.0.0",
+    "@fontsource/pt-sans": "^4.0.0",
+    "@fontsource/roboto": "^4.0.0",
+    "@fontsource/roboto-mono": "^4.0.0",
+    "@fontsource/roboto-slab": "^4.0.0",
+    "@fontsource/source-code-pro": "^4.0.0",
+    "@fontsource/source-serif-pro": "^4.0.0",
+    "@fontsource/ubuntu-mono": "^4.0.0",
+    "@fontsource/zilla-slab": "^4.0.0",
     "@hackmd/markdown-it-task-lists": "^2.1.1",
-    "@tanem/react-nprogress": "^3.0.49",
+    "@tanem/react-nprogress": "^3.0.53",
     "@types/blueimp-md5": "^2.7.0",
-    "@types/chart.js": "^2.9.28",
+    "@types/chart.js": "^2.9.29",
     "@types/css": "^0.0.31",
     "@types/flat": "^5.0.1",
     "@types/gravatar": "^1.8.0",
-    "@types/js-yaml": "^3.12.5",
+    "@types/js-yaml": "^4.0.0",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.merge": "^4.6.6",
-    "@types/markdown-it": "^10.0.3",
-    "@types/node": "^14.14.10",
+    "@types/markdown-it": "^12.0.1",
+    "@types/node": "^14.14.22",
     "@types/object-path": "^0.11.0",
     "@types/prismjs": "^1.16.2",
     "@types/react": "^17.0.0",
     "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^17.0.0",
-    "@types/socket.io-client": "^1.4.33",
+    "@types/socket.io-client": "^1.4.35",
     "@types/streamsaver": "^2.0.0",
     "@types/twemoji": "^12.1.1",
-    "@types/ua-parser-js": "^0.7.33",
+    "@types/ua-parser-js": "^0.7.35",
     "@types/uuid": "^8.3.0",
-    "@types/validator": "^13.1.0",
+    "@types/validator": "^13.1.3",
     "@types/webpack-env": "^1.16.0",
     "ansi_up": "^4.0.4",
     "autotrack": "^2.4.1",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-prismjs": "^2.0.1",
     "blueimp-md5": "^2.18.0",
     "chart.js": "^2.9.4",
-    "class-validator": "^0.12.2",
+    "class-validator": "^0.13.1",
     "css": "^3.0.0",
     "css-element-queries": "^1.2.3",
     "css-url-relative-plugin": "^1.0.1",
     "customize-cra": "^1.0.0",
     "cz-conventional-changelog": "3.3.0",
-    "dayjs": "^1.9.6",
+    "dayjs": "^1.10.3",
     "dtsgenerator": "2.7.0",
+    "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
     "flat": "^5.0.2",
     "fomantic-ui-css": "^2.8.7",
-    "fontsource-dm-mono": "^3.0.5",
-    "fontsource-fira-code": "^3.0.5",
-    "fontsource-inconsolata": "^3.0.5",
-    "fontsource-jetbrains-mono": "^3.0.5",
-    "fontsource-noto-sans": "^3.0.10",
-    "fontsource-noto-serif": "^3.0.9",
-    "fontsource-nunito-sans": "^3.0.9",
-    "fontsource-open-sans": "^3.0.9",
-    "fontsource-pt-mono": "^3.0.9",
-    "fontsource-pt-sans": "^3.0.9",
-    "fontsource-roboto": "^3.0.3",
-    "fontsource-roboto-mono": "^3.0.3",
-    "fontsource-roboto-slab": "^3.0.3",
-    "fontsource-source-code-pro": "^3.0.10",
-    "fontsource-source-serif-pro": "^3.0.10",
-    "fontsource-ubuntu-mono": "^3.0.9",
-    "fontsource-zilla-slab": "^3.0.9",
-    "fs-extra": "^9.0.1",
+    "fs-extra": "^9.1.0",
     "git-repo-info": "^2.1.1",
     "gravatar": "^1.8.1",
     "hack-font": "source-foundry/Hack#1eddf94",
     "immutability-helper": "^3.1.1",
-    "js-yaml": "^3.14.0",
+    "js-yaml": "^4.0.0",
     "jsondiffpatch": "^0.4.1",
-    "less": "^3.12.2",
-    "less-loader": "^7.1.0",
+    "less": "^4.1.0",
+    "less-loader": "^7.3.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
-    "markdown-it": "^12.0.2",
+    "markdown-it": "^12.0.4",
     "markdown-it-math-loose": "^4.1.1",
     "markdown-it-mentions": "^1.0.0",
     "markdown-it-merge-cells": "^1.0.1",
@@ -82,32 +83,32 @@
     "mobx": "^4.15.4",
     "mobx-persist": "^0.4.1",
     "mobx-react-lite": "^2.2.2",
-    "mobx-utils": "^5.6.1",
+    "mobx-utils": "^5.6.2",
     "monaco-ace-tokenizer": "^0.2.1",
-    "monaco-editor": "^0.21.2",
-    "monaco-editor-webpack-plugin": "^2.0.0",
-    "monaco-tree-sitter": "^0.0.5",
+    "monaco-editor": "0.21.2",
+    "monaco-editor-webpack-plugin": "2.0.0",
+    "monaco-themes": "^0.3.3",
     "navi": "^0.14.0",
     "noty": "^3.2.0-beta",
     "object-path": "^0.11.5",
     "p-all": "^3.0.0",
     "patch-package": "^6.2.2",
     "postinstall-postinstall": "^2.1.0",
-    "prettier": "^2.2.0",
-    "prismjs": "^1.22.0",
+    "prettier": "^2.2.1",
+    "prismjs": "^1.23.0",
     "react": "^17.0.0",
-    "react-app-rewired": "^2.1.6",
+    "react-app-rewired": "^2.1.8",
     "react-chartjs-2": "2.11.1",
     "react-countdown": "^2.3.1",
     "react-dom": "^17.0.0",
-    "react-google-recaptcha-v3": "^1.7.0",
+    "react-google-recaptcha-v3": "^1.7.1",
     "react-helmet-async": "^1.0.7",
-    "react-intl": "^5.10.5",
-    "react-monaco-editor": "^0.40.0",
+    "react-intl": "^5.10.16",
+    "react-monaco-editor": "0.40.0",
     "react-navi": "^0.14.4",
     "react-scripts": "4.0.1",
     "react-textarea-autosize": "^8.3.0",
-    "semantic-ui-react": "^2.0.1",
+    "semantic-ui-react": "^2.0.3",
     "sf-mono-webfont": "^1.0.0",
     "socket.io-client": "^2.3.0",
     "socket.io-msgpack-parser": "^2.2.1",
@@ -116,19 +117,17 @@
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
     "timeago.js": "^4.0.2",
-    "tree-sitter-wasm-prebuilt": "0.0.1",
     "twemoji": "^13.0.1",
     "typeface-lato": "^1.1.13",
     "typeface-saira": "^1.1.13",
-    "typescript": "~4.1.2",
-    "ua-parser-js": "^0.7.22",
-    "use-debounce": "^5.1.0",
-    "uuid": "^8.3.1",
+    "typescript": "~4.1.3",
+    "ua-parser-js": "^0.7.23",
+    "use-debounce": "^5.2.0",
+    "uuid": "^8.3.2",
     "val-loader": "^2.1.2",
-    "validator": "^13.1.17",
+    "validator": "^13.5.2",
     "wastyle": "^0.0.5",
     "web-streams-polyfill": "^3.0.1",
-    "web-tree-sitter": "0.16.4",
     "workerize-loader": "^1.3.0",
     "xss": "^1.0.8"
   },
