--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@fontsource/zilla-slab": "^4.0.0",
     "@hackmd/markdown-it-task-lists": "^2.1.1",
     "@tanem/react-nprogress": "^3.0.53",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "@types/blueimp-md5": "^2.7.0",
     "@types/chart.js": "^2.9.29",
     "@types/css": "^0.0.31",
@@ -44,6 +47,7 @@
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
     "@types/webpack-env": "^1.16.0",
+    "@types/jest": "^26.0.15",
     "ansi_up": "^4.0.4",
     "autotrack": "^2.4.1",
     "axios": "^0.21.1",
@@ -137,7 +141,8 @@
     "build": "react-app-rewired build",
     "format": "prettier --write \"*.js\" \"scripts/**/*.js\" \"src/**/*.ts\" \"src/**/*.js\" \"src/**/*.tsx\"",
     "generate-api": "node scripts/generate-api.js $API_HOST/docs-json && prettier --write \"src/api-generated/**/*.ts\"",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
