feat(graph): basic graph display

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/blueimp-md5": "^2.7.0",
     "@types/chart.js": "^2.9.29",
     "@types/css": "^0.0.31",
+    "@types/d3": "^6.3.0",
     "@types/flat": "^5.0.1",
     "@types/gravatar": "^1.8.0",
     "@types/js-yaml": "^4.0.0",
@@ -61,6 +62,7 @@
     "css-url-relative-plugin": "^1.0.1",
     "customize-cra": "^1.0.0",
     "cz-conventional-changelog": "3.3.0",
+    "d3": "^6.5.0",
     "dayjs": "^1.10.3",
     "dtsgenerator": "2.7.0",
     "extract-loader": "^5.1.0",
