ci(github): fix check style won't fail

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
     - name: Build
       run: yarn build
     - name: Check style
-      run: yarn format --check
+      run: yarn check-style
