--- a/package.json
+++ b/package.json
@@ -135,6 +135,7 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "format": "prettier --write \"*.js\" \"scripts/**/*.js\" \"src/**/*.ts\" \"src/**/*.js\" \"src/**/*.tsx\"",
+    "check-style": "prettier --check \"*.js\" \"scripts/**/*.js\" \"src/**/*.ts\" \"src/**/*.js\" \"src/**/*.tsx\"",
     "generate-api": "node scripts/generate-api.js $API_HOST/docs-json && prettier --write \"src/api-generated/**/*.ts\"",
     "postinstall": "patch-package"
   },
