--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Check style
       run: yarn check-style
     - name: Deploy
-#      if: github.ref == 'refs/heads/gtdh'
+      if: github.ref == 'refs/heads/gtdh'
       uses: burnett01/rsync-deployments@4.1
       with:
         switches: -avzr --delete
