--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,12 @@ jobs:
         node-version: 14.x
     - name: Install
       run: yarn
-    - name: Build
-      run: yarn build
     - name: Check style
       run: yarn check-style
+    - name: Test
+      run: yarn test --watchAll=false --silent
+    - name: Build
+      run: yarn build
     - name: Deploy
       if: github.ref == 'refs/heads/gtdh'
       uses: burnett01/rsync-deployments@4.1
