--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "syzoj-ng-app",
+  "name": "@lyrio/ui",
   "version": "0.2.2",
   "devDependencies": {
     "@fontsource/dm-mono": "^4.0.0",
@@ -154,8 +154,8 @@
       "last 1 safari version"
     ]
   },
-  "description": "The frontend of next-generation SYZOJ",
-  "repository": "https://github.com/syzoj/syzoj-ng-app",
+  "description": "The web frontend of Lyrio",
+  "repository": "https://github.com/lyrio-dev/ui",
   "author": "Menci",
   "license": "MIT",
   "config": {
