--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/flat": "^5.0.1",
     "@types/gravatar": "^1.8.0",
     "@types/js-yaml": "^4.0.0",
+    "@types/linkify-it": "^3.0.2",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/lodash.isequal": "^4.5.5",
     "@types/lodash.merge": "^4.6.6",
@@ -76,7 +77,6 @@
     "lodash.merge": "^4.6.2",
     "markdown-it": "^12.0.4",
     "markdown-it-math-loose": "^4.1.1",
-    "markdown-it-mentions": "^1.0.0",
     "markdown-it-merge-cells": "^1.0.1",
     "mathjax-full": "^3.1.2",
     "mobx": "^4.15.4",
