--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
     "timeago.js": "^4.0.2",
+    "tlds": "^1.227.0",
     "twemoji": "^13.0.1",
     "typeface-lato": "^1.1.13",
     "typeface-saira": "^1.1.13",
