refactor: switch from Webpack to Vite

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@lyrio/ui",
   "version": "0.2.8",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-decorators": "^7.17.2",
+    "@esbuild-plugins/node-globals-polyfill": "^0.1.1",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@fontsource/dm-mono": "^4.0.0",
     "@fontsource/fira-code": "^4.0.0",
     "@fontsource/inconsolata": "^4.0.0",
@@ -20,35 +24,39 @@
     "@fontsource/ubuntu-mono": "^4.0.0",
     "@fontsource/zilla-slab": "^4.0.0",
     "@hackmd/markdown-it-task-lists": "^2.1.1",
+    "@swc/core": "^1.2.138",
     "@tanem/react-nprogress": "^3.0.53",
     "@types/blueimp-md5": "^2.7.0",
     "@types/chart.js": "^2.9.29",
     "@types/css": "^0.0.31",
     "@types/flat": "^5.0.1",
     "@types/gravatar": "^1.8.0",
+    "@types/html-minifier-terser": "^6.1.0",
     "@types/js-yaml": "^4.0.0",
-    "@types/lodash.clonedeep": "^4.5.6",
-    "@types/lodash.isequal": "^4.5.5",
-    "@types/lodash.merge": "^4.6.6",
+    "@types/lodash": "^4.14.178",
     "@types/markdown-it": "^12.0.1",
     "@types/node": "^14.14.22",
     "@types/object-path": "^0.11.0",
     "@types/prismjs": "^1.16.2",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/serialize-javascript": "^5.0.2",
     "@types/socket.io-client": "^1.4.35",
     "@types/streamsaver": "^2.0.0",
+    "@types/svgo": "^2.6.2",
     "@types/twemoji": "^12.1.1",
     "@types/ua-parser-js": "^0.7.35",
     "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
-    "@types/webpack-env": "^1.16.0",
+    "@vitejs/plugin-legacy": "^1.7.0",
+    "@vitejs/plugin-react": "^1.2.0",
     "ansi_up": "^4.0.4",
     "autotrack": "^2.4.1",
     "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-prismjs": "^2.0.1",
     "blueimp-md5": "^2.18.0",
+    "browserslist-generator": "^1.0.65",
     "chart.js": "^2.9.4",
     "class-validator": "^0.13.1",
     "css": "^3.0.0",
@@ -58,23 +66,19 @@
     "cz-conventional-changelog": "3.3.0",
     "dayjs": "^1.10.3",
     "dtsgenerator": "2.7.0",
-    "extract-loader": "^5.1.0",
-    "file-loader": "^6.2.0",
     "flat": "^5.0.2",
     "fomantic-ui-css": "^2.8.7",
     "fs-extra": "^9.1.0",
     "git-repo-info": "^2.1.1",
     "gravatar": "^1.8.1",
     "hack-font": "source-foundry/Hack#1eddf94",
+    "husky": "^7.0.4",
     "immutability-helper": "^3.1.1",
     "js-yaml": "^4.0.0",
     "jsondiffpatch": "^0.4.1",
     "less": "^4.1.0",
-    "less-loader": "^7.3.0",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.isequal": "^4.5.0",
-    "lodash.merge": "^4.6.2",
-    "markdown-it": "^12.0.4",
+    "lodash": "npm:lodash-es@^4.17.21",
+    "markdown-it": "npm:@esm-bundle/markdown-it@^12.0.4",
     "markdown-it-math-loose": "^4.1.1",
     "markdown-it-mentions": "^1.0.0",
     "markdown-it-merge-cells": "^1.0.1",
@@ -85,9 +89,9 @@
     "mobx-utils": "^5.6.2",
     "monaco-ace-tokenizer": "^0.2.1",
     "monaco-editor": "0.21.2",
-    "monaco-editor-webpack-plugin": "2.0.0",
     "monaco-themes": "^0.3.3",
     "navi": "^0.14.0",
+    "node-html-parser": "^5.2.0",
     "noty": "^3.2.0-beta",
     "object-path": "^0.11.5",
     "p-all": "^3.0.0",
@@ -95,26 +99,25 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.2.1",
     "prismjs": "^1.23.0",
-    "react": "^17.0.0",
-    "react-app-rewired": "^2.1.8",
+    "react": "^17.0.2",
     "react-chartjs-2": "2.11.1",
     "react-countdown": "^2.3.1",
-    "react-dom": "^17.0.0",
+    "react-dom": "^17.0.2",
     "react-google-recaptcha-v3": "^1.7.1",
     "react-helmet-async": "^1.0.7",
     "react-intl": "^5.10.16",
     "react-monaco-editor": "0.40.0",
     "react-navi": "^0.14.4",
-    "react-scripts": "4.0.1",
     "react-textarea-autosize": "^8.3.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "semantic-ui-react": "^2.0.3",
+    "serialize-javascript": "^6.0.0",
     "sf-mono-webfont": "^1.0.0",
     "socket.io-client": "^2.3.0",
     "socket.io-msgpack-parser": "^2.2.1",
     "streamsaver": "^2.0.5",
     "string-replace-to-array": "^1.0.3",
-    "svgo": "^1.3.2",
-    "svgo-loader": "^2.2.1",
+    "svgo": "^2.8.0",
     "timeago.js": "^4.0.2",
     "twemoji": "^13.0.1",
     "typeface-lato": "^1.1.13",
@@ -123,36 +126,27 @@
     "ua-parser-js": "^0.7.23",
     "use-debounce": "^5.2.0",
     "uuid": "^8.3.2",
-    "val-loader": "^2.1.2",
     "validator": "^13.5.2",
+    "vite": "^2.8.0",
+    "vite-plugin-compile-time": "^0.1.2",
+    "vite-plugin-dynamic-base": "^0.0.3",
+    "vite-plugin-ejs": "^1.4.3",
+    "vite-plugin-html-minifier-terser": "^2.0.0",
+    "vite-plugin-prismjs": "^0.0.8",
     "wastyle": "^0.0.5",
     "web-streams-polyfill": "^3.0.1",
-    "workerize-loader": "^1.3.0",
     "xss": "^1.0.8"
   },
-  "config-overrides-path": "react-app-rewired.js",
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "format": "prettier --write \"*.js\" \"scripts/**/*.js\" \"src/**/*.ts\" \"src/**/*.js\" \"src/**/*.tsx\"",
-    "check-style": "prettier --check \"*.js\" \"scripts/**/*.js\" \"src/**/*.ts\" \"src/**/*.js\" \"src/**/*.tsx\"",
+    "start": "vite",
+    "build": "vite build",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.{js,ts,tsx}\"",
+    "check-style": "prettier --ignore-path .gitignore --check \"**/*.{js,ts,tsx}\"",
     "generate-api": "node scripts/generate-api.js $API_HOST/docs-json && prettier --write \"src/api-generated/**/*.ts\"",
     "postinstall": "patch-package"
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   },
   "description": "The web frontend of Lyrio",
   "repository": "https://github.com/lyrio-dev/ui",
@@ -164,7 +158,7 @@
     }
   },
   "files": [
-    "/build"
+    "/dist"
   ],
-  "jsdelivr": "build/index.html"
+  "jsdelivr": "dist/index.html"
 }
